@@ -125,3 +125,11 @@ void CLocationBar::SetFrameHwnd(HWND hwndFrame)
 {
 	m_hwndFrame = hwndFrame;
 }
+/**
+ * @brief Update any resources necessary after a GUI language change
+ */
+void CLocationBar::UpdateResources()
+{
+	String sCaption = theApp.LoadString(IDS_LOCBAR_CAPTION);
+	SetWindowText(sCaption.c_str());
+}
